# ascend-hbm-ipc-demo

./: .gitignore  CMakeLists.txt  README.md  build.sh
scripts/: run_demo.sh  xds_module.sh
src/: client.cpp  ipc_common.h  worker.cpp  xds_reader.cpp  xds_reader.h
tests/: ipc_contract_test.cpp  xds_kernel_contract_test.cpp  xds_reader_test.cpp
